# trustme-cli

./: LICENSE  README.md  pyproject.toml  trustme_cli.py
